--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,4 +2,10 @@
 
 <h1>Campgrounds Page!!!!</h1>
 
+<% campgrounds.forEach(function(campgrounds){ %>
+    <li>
+        <%= campgrounds.name %>
+    </li>
+<%})%>
+
 <% include partials/footer %>
