--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,6 +2,6 @@
 
 <h1>Landing Page!!!!</h1>
 <p>Welcome to Untitled</p>
-<a href="campgrounds">Click Here to see all the Campgrounds!</a>
+<a href="/campgrounds">View All Campgrounds!</a>
 
 <% include partials/footer %>
