--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -5,7 +5,7 @@
 <% campgrounds.forEach(function(campgrounds){ %>
     <div>
         <h4> <%= campgrounds.name %> </h4>
-        <img src= <%= campgrounds.image%> >
+        <img src= "<%= campgrounds.image%>">
     </div>
 <%})%>
 
