--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,3 +1,13 @@
 <% include partials/header %>
-<h1>New Page!!!!</h1>
+
+<h1>Create a new Campground</h1>
+
+<form action="/campgrounds" method="POST">
+
+    <input type="text" name="name" placeholder="name">
+    <input type="text" name="image" placeholder="image">
+    <button>Submit!</button>
+
+</form>
+
 <% include partials/footer %>
