--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
 <form action="/campgrounds" method="POST">
 
     <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image">
+    <input type="text" name="image" placeholder="image url">
     <button>Submit!</button>
 
 </form>
