--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,6 +2,8 @@
 
 <h1>Campgrounds Page!!!!</h1>
 
+<a href="/campgrounds/new">Add New Campgrounds!</a>
+
 <% campgrounds.forEach(function(campgrounds){ %>
     <div>
         <h4> <%= campgrounds.name %> </h4>
