--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,7 +2,7 @@
 
 <h1>Campgrounds Page!!!!</h1>
 
-<a href="/campgrounds/new">Add New Campgrounds!</a>
+<a href="/campgrounds/new">Add New Campground!</a>
 
 <% campgrounds.forEach(function(campgrounds){ %>
     <div>
