--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,6 +1,9 @@
 <% include partials/header %>
 
-<h1>Campgrounds Page!!!!</h1>
+<header class="jumbotron">
+    <h1>Campgrounds Page!!!!</h1>
+</header>
+
 
 <a href="/campgrounds/new">Add New Campground!</a>
 
