--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,17 +1,24 @@
 <% include partials/header %>
 
-<header class="jumbotron">
-    <h1>Campgrounds Page!!!!</h1>
-</header>
+<div class="container">
 
+    <header class="jumbotron">
 
-<a href="/campgrounds/new">Add New Campground!</a>
+        <h1>Welcome!!!!</h1>
+        <p>
+            <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground!</a>
+        </p>
 
-<% campgrounds.forEach(function(campgrounds){ %>
+    </header>
+
+    <% campgrounds.forEach(function(campgrounds){ %>
     <div>
         <h4> <%= campgrounds.name %> </h4>
         <img src= "<%= campgrounds.image%>">
     </div>
-<%})%>
+    <%})%>
+
+</div>
+
 
 <% include partials/footer %>
