--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -4,10 +4,12 @@
 
     <header class="jumbotron">
 
-        <h1>Welcome!!!!</h1>
-        <p>
-            <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground!</a>
-        </p>
+        <div class="container">
+            <h1>Welcome!!!!</h1>
+            <p>
+                <a class="btn btn-primary btn-lg" href="/campgrounds/new">Add New Campground!</a>
+            </p>
+        </div>
 
     </header>
 
