--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -16,9 +16,11 @@
     <div class="row">
 
         <% campgrounds.forEach(function(campgrounds){ %>
-        <div class="col-lg-12">
-            <h4> <%= campgrounds.name %> </h4>
-            <img src= "<%= campgrounds.image%>">
+        <div class="col-md-3 col-sm-6">
+            <div class="thumbnail">
+                <h4> <%= campgrounds.name %> </h4>
+                <img src= "<%= campgrounds.image%>">
+            </div>
         </div>
         <%})%>
 
