--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -18,8 +18,10 @@
         <% campgrounds.forEach(function(campgrounds){ %>
         <div class="col-md-3 col-sm-6">
             <div class="thumbnail">
-                <h4> <%= campgrounds.name %> </h4>
                 <img src= "<%= campgrounds.image%>">
+                <div class="caption">
+                    <h4> <%= campgrounds.name %> </h4>
+                </div>
             </div>
         </div>
         <%})%>
