--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -13,7 +13,7 @@
 
     </header>
 
-    <div class="row">
+    <div class="row" style="display:flex; flex-wrap: wrap;">
 
         <% campgrounds.forEach(function(campgrounds){ %>
         <div class="col-md-3 col-sm-6">
