--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,5 +1,16 @@
 <% include partials/header %>
 
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Untitled</a>
+        </div>
+
+    </div>
+
+</nav>
+
 <div class="container">
 
     <header class="jumbotron">
@@ -13,7 +24,7 @@
 
     </header>
 
-    <div class="row" style="display:flex; flex-wrap: wrap;">
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
 
         <% campgrounds.forEach(function(campgrounds){ %>
         <div class="col-md-3 col-sm-6">
