--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,9 +4,9 @@
 
 <form action="/campgrounds" method="POST">
 
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image url">
-    <button>Submit!</button>
+    <input class="form-control" type="text" name="name" placeholder="name">
+    <input class="form-control" type="text" name="image" placeholder="image url">
+    <button class="btn btn-lg btn-default">Submit!</button>
 
 </form>
 
