--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,15 +1,31 @@
 <% include partials/header %>
 
-<h1>Create a new Campground</h1>
+<div class="container">
+    <div class="row">
 
-<form action="/campgrounds" method="POST">
+        <h1 style="text-align: center">Create a new Campground</h1>
 
-    <input class="form-control" type="text" name="name" placeholder="name">
-    <input class="form-control" type="text" name="image" placeholder="image url">
-    <button class="btn btn-lg btn-default">Submit!</button>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
 
-</form>
+                    <input class="form-control" type="text" name="name" placeholder="name">
 
-<a href="/campgrounds">Go Back!</a>
+                </div>
+
+                <div class="form-group">
+                    <input class="form-control" type="text" name="image" placeholder="image url">
+                </div>
+
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                </div>
+            </form>
+
+            <a href="/campgrounds">Go Back!</a>
+
+        </div>
+    </div>
+</div>
 
 <% include partials/footer %>
