--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
                 <div class="caption">
                     <h4> <%= campgrounds.name %> </h4>
                 </div>
+                <p>
+                    <a href="" class="btn btn-primary">More Info!</a>
+                </p>
             </div>
         </div>
         <%})%>
