--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                     <h4> <%= campgrounds.name %> </h4>
                 </div>
                 <p>
-                    <a href="" class="btn btn-primary">More Info!</a>
+                    <a href="/campgrounds/ <%= campgrounds._id%>" class="btn btn-primary">More Info!</a>
                 </p>
             </div>
         </div>
