--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -6,7 +6,7 @@
         <h1 style="text-align: center">Add new Comment to  <%= campground.name %></h1>
 
         <div style="width: 30%; margin: 25px auto;">
-            <form action="/campgrounds/<% campground._id %>/comments" method="POST">
+            <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
 
                 <div class="form-group">
 
