added new comment button

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,5 +13,10 @@
 
 <% }); %>
 
+<p>
+    <a class="btn btn-success" href="/campgrounds/<%=campground._id%>/comments/new">Add Comment</a>
+
+</p>
+
 
 <% include ../partials/footer %>
