--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,22 +1,58 @@
 <% include ../partials/header %>
 
-<h1><%= campground.name %></h1>
-<img src="<%= campground.image %>">
-<p><%= campground.description %></p>
+<div class="container">
 
-<p>Comments!</p>
-<% campground.comments.forEach(function (comment){ %>
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">Untitled</p>
+            <div class="list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="img-responsive" src="<%= campground.image %>">
+                <div class="caption-full">
+                    <h4 class="pull-right">$9.00/night</h4>
+                    <h4><a><%= campground.name %></a></h4>
+                    <p><%= campground.description %></p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a class="btn btn-success" href="/campgrounds/<%=campground._id%>/comments/new">Leave A Review</a>
+                </div>
+                <hr>
+                <% campground.comments.forEach(function (comment){ %>
+                <div class="row">
+                    <div class="col-md-12">
 
-    <p>
-        <strong> <%= comment.author%> </strong> - <%= comment.text %>
-    </p>
+                        <strong> <%= comment.author%> </strong>
+                        <span class="pull-right"> 10 days ago!</span>
+                        <p>
+                            <%= comment.text %>
+                        </p>
 
-<% }); %>
+                    </div>
 
-<p>
-    <a class="btn btn-success" href="/campgrounds/<%=campground._id%>/comments/new">Add Comment</a>
+                </div>
 
-</p>
+
+
+                <% }); %>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+</div>
+
+
 
 
 <% include ../partials/footer %>
