--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,6 @@
+<% include ./partials/header %>
+
+
 <h1>Log In</h1>
 
 <form action="/login" method="POST">
@@ -7,3 +10,5 @@
     <button>Submit</button>
 
 </form>
+
+<% include ./partials/footer %>
