--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,6 @@
+<% include ./partials/header %>
+
+
 <h1>Sign Up</h1>
 
 <form action="/register" method="POST">
@@ -7,3 +10,5 @@
     <button>Submit</button>
 
 </form>
+
+<% include ./partials/footer %>
