--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,8 @@
               <li><a href="/login">Login</a></li>
               <li><a href="/register">Sign Up</a></li>
           <%} else {%>
+                <li><a href="#">Signed In As: <%= currentUser.username %></a></li>
+
                 <li><a href="/logout">Log Out</a></li>
           <%  } %>
         </ul>
