--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -23,7 +23,7 @@
                     </p>
                     <% if(currentUser && campground.author.id.equals(currentUser._id)){%>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                        <form id="delete" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                        <form class="delete" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Delete</button>
                         </form>
                     <% }%>
@@ -47,6 +47,9 @@
                            href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">
                             Edit
                         </a>
+                        <form class="delete" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
 
                     </div>
 
