--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -43,13 +43,15 @@
                         <p>
                             <%= comment.text %>
                         </p>
-                        <a class="btn btn-xs btn-warning"
-                           href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">
-                            Edit
-                        </a>
-                        <form class="delete" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id%>?_method=DELETE" method="POST">
-                            <button class="btn btn-xs btn-danger">Delete</button>
-                        </form>
+                        <% if(currentUser && campground.author.username){%>
+                            <a class="btn btn-xs btn-warning"
+                               href="/campgrounds/<%= campground._id%>/comments/<%= comment._id%>/edit">
+                                Edit
+                            </a>
+                            <form class="delete" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id%>?_method=DELETE" method="POST">
+                                <button class="btn btn-xs btn-danger">Delete</button>
+                            </form>
+                        <% }%>
 
                     </div>
 
