--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,14 +1,12 @@
 <% include ./partials/header %>
 
-
-<h1>Sign Up</h1>
-
-<form action="/register" method="POST">
-
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Submit</button>
-
-</form>
+<div class="form-style-6">
+    <h1>Register</h1>
+    <form action="/register" method="POST">
+        <input type="text" name="username" placeholder="username">
+        <input type="password" name="password" placeholder="password">
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
 <% include ./partials/footer %>
