--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,66 @@
+body{
+    background-color: ghostwhite;
+    color: black;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form{
+    background-color: black;
+}
+
+.btn-primary{
+    color: white;
+    background-color: black;
+}
+
+
+.well{
+
+    background-color: lightskyblue;
+    color: black;
+}
+
+.list-group-item{
+    border-color: black;
+    background-color: ghostwhite;
+    color: black;
+}
+
+.list-group-item.active{
+    background-color: lightskyblue;
+    color: black;
+}
+
+hr{
+    border-color: black;
+}
+
+a{
+    color: black;
+}
+
+.jumbotron{
+    text-align: center;
+    background-color: lightskyblue;
+    color: black;
+}
+
+.navbar-default .navbar-nav>li>a{
+    color: white;
+}
+
+.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
+    color: white;
+}
+.container-fluid{
+    background-color: black;
+}
 .thumbnail{
     padding: 0;
+    background-color: lightskyblue;
+    color: black;
+}
+
+.thumbnail h4{
+    color: black;
 }
 
 .thumbnail img{
@@ -14,7 +75,67 @@
     display: inline;
 }
 
-.alert {
-    width:70%;
-    height:10px;
+
+.form-style-6{
+    font: 95% Arial, Helvetica, sans-serif;
+    max-width: 400px;
+    margin: 10px auto;
+    padding: 16px;
+    background: #F7F7F7;
+}
+.form-style-6 h1{
+    background: #000000;
+    padding: 20px 0;
+    font-size: 140%;
+    font-weight: 300;
+    text-align: center;
+    color: #fff;
+    margin: -16px -16px 16px -16px;
+}
+.form-style-6 input[type="text"],
+.form-style-6 input[type="password"],
+.form-style-6 select
+{
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%;
+    background: #fff;
+    margin-bottom: 4%;
+    border: 1px solid #ccc;
+    padding: 4%;
+    color: #555;
+    font: 95% Arial, Helvetica, sans-serif;
+}
+.form-style-6 input[type="text"]:focus,
+.form-style-6 input[type="password"]:focus,
+.form-style-6 select:focus
+{
+    box-shadow: 0 0 5px #000000;
+    padding: 3%;
+    border: 1px solid lightskyblue;
+}
+
+.form-style-6 input[type="submit"],
+.form-style-6 input[type="button"]{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    width: 100%;
+    padding: 3%;
+    background: #000000;
+    border-bottom: 2px solid #000000;
+    border-top-style: none;
+    border-right-style: none;
+    border-left-style: none;
+    color: #fff;
+}
+.form-style-6 input[type="submit"]:hover,
+.form-style-6 input[type="button"]:hover{
+    background: lightskyblue;
 }
