--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,7 +31,7 @@
             </div>
             <div class="well">
                 <div class="text-right">
-                    <a class="btn btn-success" href="/campgrounds/<%=campground._id%>/comments/new">Leave A Review</a>
+                    <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>/comments/new">Leave A Review</a>
                 </div>
                 <hr>
                 <% campground.comments.forEach(function (comment){ %>
