--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,13 @@
 <% include ./partials/header %>
 
+<div class="form-style-6">
+    <h1>Login</h1>
+    <form action="/login" method="POST">
+        <input type="text" name="username" placeholder="username">
+        <input type="password" name="password" placeholder="password">
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
-<h1>Log In</h1>
-
-<form action="/login" method="POST">
-
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Submit</button>
-
-</form>
 
 <% include ./partials/footer %>
